--- a/service.html
+++ b/service.html
@@ -22,6 +22,16 @@
         text-align: center;
         margin-top: 50px;
       }
+        /* short underline for service */
+      .title h1::after{
+        content: "";
+        height: 5px;
+        width: 100px;
+        background-color: Red;
+        border-radius: 25px;
+        display: block;
+        margin: auto;
+      }
       .title p{
         font-size: 20px;
         color: #8c8c8c;
